--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ilrein.github.io/method-weather",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
